--- a/InternetBankaciligi.MVC/Resources/Controllers.LoginController.en-US.resx
+++ b/InternetBankaciligi.MVC/Resources/Controllers.LoginController.en-US.resx
@@ -121,7 +121,7 @@
     <value>Name</value>
   </data>
   <data name="anasayfa_donus" xml:space="preserve">
-    <value>to Return to the HomePage</value>
+    <value>To Return to the HomePage</value>
   </data>
   <data name="giris_yap" xml:space="preserve">
     <value>Log in</value>
