--- a/InternetBankaciligi.MVC/Resources/Views.Shared._LanguagePartial.en-US.resx
+++ b/InternetBankaciligi.MVC/Resources/Views.Shared._LanguagePartial.en-US.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="dilsec" xml:space="preserve">
-    <value>Choose a Language</value>
+    <value>Select a Language</value>
   </data>
 </root>
